fix backend button alignment

--- a/src/mist/io/static/main.css
+++ b/src/mist/io/static/main.css
@@ -58,8 +58,7 @@ div#splash div.mist-logo {
 }
 
 #backend-buttons .ui-controlgroup-controls {
-    display: inline;
-    float: left;
+    display: block;
     margin-bottom: 18px;
 }
 
